SF Primes/src/objects/SLS_LeadLinkCriteria__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contact_Field__c</fullName>
        <label>Contact Field</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Group__c</fullName>
        <label>Group</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lead_Field__c</fullName>
        <label>Lead Field</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Regex_Modifier__c</fullName>
        <inlineHelpText>A regular expression modifier that will be applied to the Lead field contents before it is queried. A blank value in this field will not modify either field before comparison.</inlineHelpText>
        <label>Regex Modifier</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Regex_Replacement__c</fullName>
        <inlineHelpText>A regular expression replacement that is applied to the Lead field contents before it is queried. This field requires the Modifier field to be set. If the Modifier field is not set, this field is ignored.</inlineHelpText>
        <label>Regex Replacement</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>SLS_LeadLinkCriteria</label>
</CustomObject>